# github-chat

./: .gitignore  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: config.py  data_pipeline.py  gemini_embedder.py  groq_client.py  rag.py  system_prompt.py
backend/: dto.py  main.py  utils.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatMessage.tsx  ChatPage.tsx  LandingPage.tsx  Sidebar.tsx
