[project]
name = "github-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adalflow>=1.1.3",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.0",
    "google-genai>=1.57.0",
    "google-generativeai>=0.8.6",
    "groq>=1.0.0",
    "mlflow>=3.8.1",
    "openai>=2.15.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.52.2",
    "uvicorn>=0.40.0",
]
